k8s-kind/sample-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-api-deployment
  labels:
    app: sample-api
    k8s.io/part-of: k8s-sample-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample-api
  template:
    metadata:
      labels:
        app: sample-api
        k8s.io/part-of: k8s-sample-api
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: sample-api
        image: sample-api:1
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            port: 8080
            path: /health
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 1
          failureThreshold: 3
        livenessProbe:
          httpGet:
            port: 8080
            path: /health
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 5

---
apiVersion: v1
kind: Service
metadata:
  name: sample-api-service
  labels:
    app: sample-api
    k8s.io/part-of: k8s-sample-api
spec:
  selector:
    app: sample-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: sample-api-gateway
  labels:
    app: sample-api
    k8s.io/part-of: k8s-sample-api
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sample-api-httproute
  labels:
    app: sample-api
    k8s.io/part-of: k8s-sample-api
  annotations:
    networking.istio.io/service-type: ClusterIP
spec:
  parentRefs:
  - name: sample-api-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: sample-api-service
      port: 80
